--- a/package.json
+++ b/package.json
@@ -3,5 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "airtoxin <airtoxin@icloud.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "parcel src/index.html"
+  },
+  "dependencies": {
+    "@types/dom-mediacapture-record": "^1.0.7",
+    "@types/downloadjs": "^1.4.2",
+    "@types/p5": "^0.9.1",
+    "downloadjs": "^1.4.7",
+    "p5": "^1.1.9",
+    "parcel-bundler": "^1.12.4"
+  },
+  "devDependencies": {
+    "prettier": "^2.1.1",
+    "typescript": "^4.0.2"
+  }
 }
